--- a/src/app/item-triage/ItemTriage.m.scss
+++ b/src/app/item-triage/ItemTriage.m.scss
@@ -122,9 +122,8 @@
 }
 
 .weaponSvg {
-  // these have varying aspect ratios and are fill:black by default
+  // these have varying aspect ratios
   width: auto !important;
-  filter: invert(1);
 }
 
 .inlineIcon {
