--- a/src/app/organizer/ItemTypeSelector.m.scss
+++ b/src/app/organizer/ItemTypeSelector.m.scss
@@ -21,10 +21,6 @@
   composes: dim-button from global;
   margin: 2px;
   > img {
-    filter: invert(1) drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.25)) !important;
-    &.dontInvert {
-      filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.25)) !important;
-    }
     margin-left: 0 !important;
   }
   &:hover,
@@ -32,7 +28,7 @@
   &.checked {
     background-color: $orange;
     color: black;
-    > img:not(.dontInvert) {
+    > img {
       filter: none !important;
     }
   }
