make mod placement drawer show armor upgrades + costs

--- a/src/app/loadout/mod-assignment-drawer/ModAssignmentDrawer.m.scss
+++ b/src/app/loadout/mod-assignment-drawer/ModAssignmentDrawer.m.scss
@@ -37,6 +37,16 @@
   composes: sub-bucket from global;
 }
 
+.costs {
+  display: flex;
+  flex-direction: row;
+  gap: 6px;
+
+  .cost {
+    font-size: 12px !important;
+  }
+}
+
 .headerInfo {
   display: flex;
   flex-flow: row wrap;
