Tooltips, descriptions, cleanups

--- a/src/app/loadout/mod-assignment-drawer/ModAssignmentDrawer.m.scss
+++ b/src/app/loadout/mod-assignment-drawer/ModAssignmentDrawer.m.scss
@@ -37,6 +37,17 @@
   composes: sub-bucket from global;
 }
 
+.infoSectionHeader {
+  > h3 {
+    margin-bottom: 2px;
+  }
+  > span {
+    color: grey;
+    font-style: italic;
+  }
+  margin-bottom: 10px;
+}
+
 .costs {
   display: flex;
   flex-direction: row;
