--- a/src/app/loadout-builder/generated-sets/GeneratedSetItem.m.scss
+++ b/src/app/loadout-builder/generated-sets/GeneratedSetItem.m.scss
@@ -13,6 +13,15 @@
     grid-area: item;
   }
 
+  .energyMeter {
+    margin-top: 3px;
+    padding: 3px 0;
+
+    @include phone-portrait {
+      padding: 3px 0 20px;
+    }
+  }
+
   :global {
     .item-socket-category {
       margin-right: 0;
