Track artifact configuration in loadouts

--- a/src/app/loadout/LoadoutView.m.scss
+++ b/src/app/loadout/LoadoutView.m.scss
@@ -70,3 +70,10 @@
   white-space: pre-wrap;
   user-select: text;
 }
+
+.modsStack {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  flex: 0.5;
+}
