--- a/src/app/loadout/loadout-edit/LoadoutEditSection.m.scss
+++ b/src/app/loadout/loadout-edit/LoadoutEditSection.m.scss
@@ -1,27 +1,22 @@
 @use '../../variables.scss' as *;
 
-.section {
-  position: relative;
-  padding: 8px 12px;
-  background-color: rgba(255, 255, 255, 0.1);
-  width: min-content;
-  max-width: calc(100% - 44px);
-
-  @include phone-portrait {
-    --item-margin: 4px;
-    flex: 1;
-  }
-}
-
 .header {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-bottom: 8px;
   margin-right: -8px;
-  > h3 {
-    margin: 0;
-    padding: 0;
+
+  > .title {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+
+    > h3 {
+      margin: 0;
+      padding: 0;
+      margin-right: 4px;
+    }
     flex: 1;
   }
 }
