--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -295,6 +295,9 @@ select {
     margin: 0 0.3em;
     filter: drop-shadow(0 0 1px black);
     transition: filter 150ms ease-out;
+    &:only-child {
+      margin: 0;
+    }
   }
 
   &:hover,
