Remove console, white text

--- a/src/app/loadout/ingame/EditInGameLoadout.m.scss
+++ b/src/app/loadout/ingame/EditInGameLoadout.m.scss
@@ -42,6 +42,13 @@
   &.imageButton {
     padding: 2px;
   }
+  &.hasLoadout {
+    &:hover,
+    &:active,
+    &.checked {
+      color: white !important;
+    }
+  }
 }
 
 .row {
