Add Clarity descriptions to plug picker

--- a/src/app/loadout/plug-drawer/SelectablePlug.m.scss
+++ b/src/app/loadout/plug-drawer/SelectablePlug.m.scss
@@ -54,3 +54,9 @@
     margin-bottom: 4px;
   }
 }
+
+.clarityDescription {
+  margin-top: 2px;
+  border-left: 2px solid $communityBlue;
+  padding-left: 6px;
+}
