Artifact mods style tweaks

--- a/src/app/loadout/LoadoutView.m.scss
+++ b/src/app/loadout/LoadoutView.m.scss
@@ -74,6 +74,14 @@
 .modsStack {
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
-  flex: 0.5;
+  row-gap: 16px;
+  flex: 1;
+
+  h3 {
+    margin: 0 0 4px 0;
+  }
+}
+
+.artifactMods {
+  --item-size: 40px;
 }
