--- a/src/app/dim-ui/Sheet.scss
+++ b/src/app/dim-ui/Sheet.scss
@@ -84,7 +84,9 @@ $control-color: rgba(255, 255, 255, 0.5);
       width: 24px;
       font-size: 24px;
     }
-    &:active {
+    &:active,
+    &:hover,
+    &:focus-visible {
       color: rgba(255, 255, 255, 1);
     }
 
