--- a/src/app/dim-ui/KeyHelp.m.scss
+++ b/src/app/dim-ui/KeyHelp.m.scss
@@ -10,6 +10,7 @@
   border: 1px solid #ddd;
   white-space: nowrap;
   text-align: center;
+  text-transform: uppercase;
 
   @include phone-portrait {
     display: none;
