--- a/src/app/item-actions/ActionButton.m.scss
+++ b/src/app/item-actions/ActionButton.m.scss
@@ -19,11 +19,18 @@
 }
 
 .actionButton {
+  composes: resetButton from 'app/dim-ui/common.m.scss';
   composes: entry;
-  cursor: pointer;
+
+  &:disabled {
+    filter: contrast(0.5) brightness(0.5);
+    cursor: not-allowed;
+  }
 
   @media (min-width: 541px) {
-    &:hover {
+    &:hover,
+    &:focus-visible {
+      outline: none;
       background: $orange;
       color: black;
       :global(.app-icon) {
@@ -31,9 +38,4 @@
       }
     }
   }
-}
-
-.disabled {
-  filter: contrast(0.5) brightness(0.5);
-  cursor: not-allowed;
 }
