--- a/src/app/item-actions/ActionButtons.m.scss
+++ b/src/app/item-actions/ActionButtons.m.scss
@@ -7,7 +7,7 @@
 }
 
 .tagSelectorLabelHidden {
-  padding: 0;
+  padding: 0 !important;
   :global(.dim-button) {
     border-radius: 0;
     padding: 6px 8px;
