--- a/src/app/item-popup/ItemPopupHeader.m.scss
+++ b/src/app/item-popup/ItemPopupHeader.m.scss
@@ -1,6 +1,10 @@
 @use '../variables.scss' as *;
 
 .header {
+  composes: resetButton from 'app/dim-ui/common.m.scss';
+  display: block;
+  text-align: left;
+  width: 100%;
   font-size: 15px;
   line-height: 17px;
   letter-spacing: -0.02em;
@@ -8,14 +12,13 @@
 
   background-color: #555;
   color: #eee;
-  a {
-    color: #eee;
-  }
 }
 
 .armory {
-  &:hover {
-    a {
+  &:hover,
+  &:focus-visible {
+    outline: none;
+    h1 {
       text-decoration: underline;
     }
     cursor: pointer;
@@ -27,6 +30,8 @@
   font-size: 21px;
   line-height: 24px;
   text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
 
 .subtitle {
