--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -276,4 +276,5 @@ select {
   filter: drop-shadow(0 0 0 #fff);
 }
 
+/* stylelint-disable-next-line no-invalid-position-at-import-rule */
 @import 'app/dim-ui/dim-button.scss';
