Further simplify keybindings

--- a/src/app/dim-ui/KeyHelp.m.scss
+++ b/src/app/dim-ui/KeyHelp.m.scss
@@ -1,6 +1,7 @@
 @use '../variables.scss' as *;
 
 .keyHelp {
+  font-family: monospace;
   border-radius: 2px;
   display: inline-block;
   padding: 0 4px;
