--- a/src/app/dim-ui/useBulkNote.m.scss
+++ b/src/app/dim-ui/useBulkNote.m.scss
@@ -3,22 +3,8 @@
 .form {
   position: relative;
 }
-
-.radios {
+.body {
   display: flex;
-  flex-direction: row;
-  gap: 4px;
-}
-
-.radio {
-  composes: dim-button from global;
-  &:hover,
-  &:active,
-  &.checked {
-    background-color: $orange;
-    color: black;
-    > img {
-      filter: none !important;
-    }
-  }
+  flex-direction: column;
+  gap: 8px;
 }
