--- a/src/app/clarity/descriptions/Description.m.scss
+++ b/src/app/clarity/descriptions/Description.m.scss
@@ -84,3 +84,100 @@
 .breakSpaces {
   white-space: break-spaces;
 }
+
+//--- images
+@mixin img_before {
+  background-repeat: no-repeat;
+  background-position: center;
+  display: inline-block;
+  content: '';
+  margin: 0 1px;
+  height: 10px;
+}
+.arc::before,
+.solar::before,
+.void::before,
+.stasis::before,
+.strand::before,
+.barrier::before,
+.overload::before,
+.unstoppable::before {
+  background-size: 10px 10px;
+  width: 10px;
+}
+.primary::before,
+.special::before,
+.heavy::before {
+  background-size: 18px 20px;
+  width: 13px;
+}
+.warlock::before {
+  width: 22px;
+}
+.hunter::before {
+  width: 10px;
+}
+.titan::before {
+  width: 11px;
+}
+
+//--- elements
+.arc::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/DestinyDamageTypeDefinition_092d066688b879c807c3b460afdd61e6.png);
+  @include img_before;
+}
+.solar::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/DestinyDamageTypeDefinition_2a1773e10968f2d088b97c22b22bba9e.png);
+  @include img_before;
+}
+.void::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/DestinyDamageTypeDefinition_ceb2f6197dccf3958bb31cc783eb97a0.png);
+  @include img_before;
+}
+.stasis::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/DestinyDamageTypeDefinition_530c4c3e7981dc2aefd24fd3293482bf.png);
+  @include img_before;
+}
+.strand::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/DestinyDamageTypeDefinition_b2fe51a94f3533f97079dfa0d27a4096.png);
+  @include img_before;
+}
+//--- ammo
+.primary::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/dc4bb9bcdd4ae8a83fb9007a51d7d711.png);
+  @include img_before;
+}
+.special::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/b6d3805ca8400272b7ee7935b0b75c79.png);
+  @include img_before;
+}
+.heavy::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/9fa60d5a99c9ff9cea0fb6dd690f26ec.png);
+  @include img_before;
+}
+//--- breaker
+.barrier::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/DestinyBreakerTypeDefinition_07b9ba0194e85e46b258b04783e93d5d.png);
+  @include img_before;
+}
+.overload::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/DestinyBreakerTypeDefinition_da558352b624d799cf50de14d7cb9565.png);
+  @include img_before;
+}
+.unstoppable::before {
+  background-image: url(https://www.bungie.net/common/destiny2_content/icons/DestinyBreakerTypeDefinition_825a438c85404efd6472ff9e97fc7251.png);
+  @include img_before;
+}
+//--- classes
+.warlock::before {
+  background-image: url(../svg/warlock.svg);
+  @include img_before;
+}
+.hunter::before {
+  background-image: url(../svg/hunter.svg);
+  @include img_before;
+}
+.titan::before {
+  background-image: url(../svg/titan.svg);
+  @include img_before;
+}
