--- a/src/app/loadout/ingame/InGameLoadoutDetailsSheet.m.scss
+++ b/src/app/loadout/ingame/InGameLoadoutDetailsSheet.m.scss
@@ -12,6 +12,7 @@
 
 .loadoutGrid {
   --sub-item-size: calc(var(--item-size) * 0.5);
+  --item-icon-size: calc(var(--item-size) * 0.75);
   display: grid;
   width: min-content;
   grid-auto-flow: row;
@@ -22,11 +23,9 @@
 }
 
 .itemImage {
-  height: calc(var(--item-size) * 0.75);
-  width: calc(var(--item-size) * 0.75);
+  --item-size: var(--item-icon-size);
   margin: 0 5px;
-  border: 1px solid #ddd;
-  cursor: pointer;
+  cursor: default;
   pointer-events: auto;
   grid-column: 1;
 }
