Add hotkeys to tag/note/move in bulk from Organizer, and note from item popup

--- a/src/app/organizer/ItemActions.m.scss
+++ b/src/app/organizer/ItemActions.m.scss
@@ -15,7 +15,16 @@
 
 .label {
   padding-left: 3px;
+
   @media (max-width: 900px) {
     display: none;
   }
+}
+
+.keyHelp {
+  margin-left: auto;
+}
+
+.storeName {
+  margin-right: 8px;
 }
