--- a/src/app/dim-ui/dim-button.scss
+++ b/src/app/dim-ui/dim-button.scss
@@ -88,5 +88,6 @@ a.dim-button {
 }
 
 .dim-button-primary {
-  border-color: $orange;
+  background-color: rgba(255, 255, 255, 0.3);
+  font-weight: bold;
 }
