--- a/src/app/clarity/descriptions/Description.m.scss
+++ b/src/app/clarity/descriptions/Description.m.scss
@@ -17,7 +17,7 @@
   color: hsl(0, 100%, 80%);
 }
 .pve {
-  color: hsl(220deg, 100%, 75%);
+  color: hsl(220, 100%, 75%);
 }
 .green {
   color: hsl(116, 58%, 65%);
@@ -34,19 +34,13 @@
 
 // copy pasted from src/app/item-popup/PlugTooltip.m.scss
 .enhancedArrow {
-  color: $enhancedYellow;
-
   &::before {
     content: '';
     display: inline-block;
     width: 6px;
     height: 11px;
-
-    // We need to encode the '#' prefix in the color in order to use it within the SVG.
-    /* prettier-ignore */
-    $escapedColorStr: '%23#{string.slice('#{$enhancedYellow}', 2)}';
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 33"><path d="M6,33 L6,16 L0,16 L9,0 L18,16 L12,16 L12,33 z" fill="#{$escapedColorStr}" /></svg>');
-    background-size: 6px 11px;
+    mask-image: url('images/enhancedArrow.svg');
+    background-color: $enhancedYellow;
     margin-right: 3px;
   }
 }
