--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -249,6 +249,7 @@ $content-cells: 5;
     background-color: $enhancedYellow;
     margin-top: 3px;
     margin-right: 1px;
+    margin-left: -7px
   }
 }
 
