--- a/src/app/dim-ui/useDialog.m.scss
+++ b/src/app/dim-ui/useDialog.m.scss
@@ -5,6 +5,7 @@
   background-color: #08080f;
   color: white;
   top: 0;
+  top: env(safe-area-inset-top, 0);
   margin-top: 0;
   border: 1px solid #707070;
   border-top-width: 6px;
