--- a/src/app/loadout/ingame/InGameLoadoutStrip.m.scss
+++ b/src/app/loadout/ingame/InGameLoadoutStrip.m.scss
@@ -7,15 +7,11 @@
 }
 .inGameTile {
   padding: 4px;
-
   display: grid;
   gap: 2px;
   grid-auto-flow: column;
   grid-template-rows: auto auto;
 }
-// .igtName {
-//   grid-area: name;
-// }
 .igtIconHolder {
   grid-row: 1 / 3;
   margin-right: 2px;
@@ -23,18 +19,6 @@
 .igtIcon {
   border: 1px solid #ddd;
 }
-// .igtProps {
-//   display: flex;
-//   align-items: center;
-//   gap: 2px;
-// }
-// .svgIcon {
-//   filter: invert(1);
-// }
-// .statusIconSvg {
-//   height: 16px;
-//   width: 16px;
-// }
 .statusAppIcon {
   font-size: 14px;
 }
@@ -69,4 +53,8 @@
 
 .deleteDanger {
   color: $red;
+}
+
+.matchingLoadouts {
+  padding-left: 1em;
 }
