--- a/src/app/dim-ui/CollapsibleTitle.scss
+++ b/src/app/dim-ui/CollapsibleTitle.scss
@@ -20,6 +20,14 @@
     color: #ccc;
   }
 
+  @include phone-portrait {
+    &:hover,
+    &.collapsed {
+      background-color: transparent;
+      color: white;
+    }
+  }
+
   span[role='button'] {
     cursor: pointer;
     outline: none;
