--- a/src/app/loadout/ingame/InGameLoadoutStrip.m.scss
+++ b/src/app/loadout/ingame/InGameLoadoutStrip.m.scss
@@ -27,7 +27,9 @@
   cursor: pointer;
   display: flex;
 }
-
+.isEquipped {
+  outline: #ccc solid 2px;
+}
 .kebab {
   background-color: black;
   button {
