--- a/src/app/loadout/ingame/InGameLoadoutStrip.m.scss
+++ b/src/app/loadout/ingame/InGameLoadoutStrip.m.scss
@@ -28,7 +28,7 @@
   display: flex;
 }
 .isEquipped {
-  outline: #ccc solid 2px;
+  outline: $green solid 2px;
 }
 .kebab {
   background-color: black;
@@ -36,6 +36,9 @@
     height: 100%;
     cursor: pointer;
   }
+}
+.equipAlready {
+  color: $green;
 }
 .equipOk {
   color: #fffa;
