--- a/src/app/dim-ui/ExpandableTextBlock.m.scss
+++ b/src/app/dim-ui/ExpandableTextBlock.m.scss
@@ -7,10 +7,7 @@
   &::after {
     content: '';
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    inset: 0 0 0 0;
     box-shadow: inset 0 -31px 20px -20px black;
   }
   &.open:hover {
