Make it more obvious in Loadouts when stat is boosted by Font mods

--- a/src/app/store-stats/CharacterStats.scss
+++ b/src/app/store-stats/CharacterStats.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+
 /* INT/DIS/STR bars */
 .stat-bars {
   width: 100%;
@@ -106,6 +108,9 @@
       flex: 0;
       font-size: 11px;
       color: #ccc;
+      &.boostedValue {
+        color: $blue;
+      }
       &.pointerCursor {
         cursor: pointer;
       }
