--- a/src/app/loadout/mod-assignment-drawer/ModAssignmentDrawer.m.scss
+++ b/src/app/loadout/mod-assignment-drawer/ModAssignmentDrawer.m.scss
@@ -84,6 +84,10 @@
     margin-right: 8px;
     font-size: 1.2em;
 
+    &:global(.boostedValue) {
+      color: $blue;
+    }
+
     img {
       height: 20px;
       width: 20px;
