--- a/src/app/destiny1/loadout-drawer/LoadoutDrawerOptions.m.scss
+++ b/src/app/destiny1/loadout-drawer/LoadoutDrawerOptions.m.scss
@@ -48,6 +48,6 @@
   &:focus {
     background: black;
     outline: none;
-    border-bottom: 1px solid $orange;
+    border-bottom: 1px solid var(--theme-accent-primary);
   }
 }
