--- a/src/app/dim-ui/Dropdown.m.scss
+++ b/src/app/dim-ui/Dropdown.m.scss
@@ -43,7 +43,7 @@
 }
 
 .highlighted {
-  background-color: $orange;
+  background-color: var(--theme-accent-primary);
   color: black !important;
   :global(.app-icon) {
     color: black !important;
