--- a/src/app/item-popup/Plug.m.scss
+++ b/src/app/item-popup/Plug.m.scss
@@ -14,7 +14,7 @@
 }
 // This has been selected by the user but isn't the original plugged item
 .selected {
-  fill: $orange;
+  fill: var(--theme-accent-primary);
 }
 
 .cannotRoll {
