--- a/src/app/item-popup/SocketDetails.m.scss
+++ b/src/app/item-popup/SocketDetails.m.scss
@@ -39,7 +39,7 @@
 
 .selected,
 .clickableMod:focus {
-  outline: 2px solid $orange !important;
+  outline: 2px solid var(--theme-accent-primary) !important;
 }
 
 .energyElement {
