--- a/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
+++ b/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
@@ -105,7 +105,7 @@
 
   &:hover,
   a:hover {
-    background-color: $orange;
+    background-color: var(--theme-accent-primary);
     color: black !important;
     > span:first-child > :global(.app-icon) {
       color: black !important;
@@ -141,7 +141,7 @@
     }
   }
   &:hover {
-    background-color: $blue;
+    background-color: var(--theme-accent-secondary);
     color: #222;
   }
 }
@@ -200,7 +200,7 @@
   composes: resetButton from '../../dim-ui/common.m.scss';
   &:hover,
   &:focus-visible {
-    outline: 2px solid $orange;
+    outline: 2px solid var(--theme-accent-primary);
   }
   display: block;
 }
