--- a/src/app/shell/About.m.scss
+++ b/src/app/shell/About.m.scss
@@ -6,7 +6,7 @@
     font-weight: 400;
     font-size: 1.1em;
     margin-top: 10px;
-    color: $orange;
+    color: var(--theme-accent-primary);
   }
   dd {
     margin: 4px 0 8px 0;
