--- a/src/app/accounts/Account.m.scss
+++ b/src/app/accounts/Account.m.scss
@@ -27,7 +27,7 @@
 }
 
 .selectedAccount {
-  border-left: 4px solid $orange;
+  border-left: 4px solid var(--theme-accent-primary);
   padding-left: calc(1rem - 4px) !important;
   padding-right: 24px;
   height: 100%;
