--- a/src/app/accounts/MenuAccounts.m.scss
+++ b/src/app/accounts/MenuAccounts.m.scss
@@ -18,7 +18,7 @@
       &:hover,
       &:focus {
         color: black;
-        background-color: $orange;
+        background-color: var(--theme-accent-primary);
       }
     }
   }
