--- a/src/app/compare/CompareItem.m.scss
+++ b/src/app/compare/CompareItem.m.scss
@@ -18,7 +18,7 @@
 }
 
 .initialItem {
-  color: $orange;
+  color: var(--theme-accent-primary);
   font-weight: bold;
 }
 
@@ -54,6 +54,6 @@
   background-position: center;
   background-repeat: no-repeat;
   &:hover {
-    background-color: $orange;
+    background-color: var(--theme-accent-primary);
   }
 }
