--- a/src/app/dim-ui/CollapsibleTitle.scss
+++ b/src/app/dim-ui/CollapsibleTitle.scss
@@ -42,7 +42,7 @@
   .collapse-icon {
     font-size: 16px;
     &:hover {
-      color: $orange;
+      color: var(--theme-accent-primary);
     }
     margin-left: -4px;
     width: 10px;
