--- a/src/app/dim-ui/FilterPills.m.scss
+++ b/src/app/dim-ui/FilterPills.m.scss
@@ -42,6 +42,6 @@
 }
 
 .selected {
-  border-color: $orange !important;
+  border-color: var(--theme-accent-primary) !important;
   background: rgba(0, 0, 0, 0.6);
 }
