--- a/src/app/dim-ui/RadioButtons.m.scss
+++ b/src/app/dim-ui/RadioButtons.m.scss
@@ -15,7 +15,7 @@
     content: '';
     display: block;
     position: absolute;
-    background-color: $orange;
+    background-color: var(--theme-accent-primary);
     height: 2px;
     bottom: -1px;
     left: -1px;
