--- a/src/app/dim-ui/Select.m.scss
+++ b/src/app/dim-ui/Select.m.scss
@@ -24,6 +24,7 @@
   align-items: center;
   min-width: 10em;
   padding: 6px 9px;
+
   @include phone-portrait {
     padding: 10px 16px;
     font-size: 14px;
@@ -40,7 +41,7 @@
 }
 
 .highlighted {
-  background-color: $orange;
+  background-color: var(--theme-accent-primary);
   color: black !important;
   :global(.app-icon) {
     color: black !important;
