--- a/src/app/inventory-page/HeaderShadowDiv.m.scss
+++ b/src/app/inventory-page/HeaderShadowDiv.m.scss
@@ -17,7 +17,7 @@
   position: absolute;
   left: 0;
   z-index: 9;
-  background: $gradient;
+  background: var(--theme-background-app-header-secondary);
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100% 100vh;
