--- a/src/app/loadout-builder/LoadoutBuilder.m.scss
+++ b/src/app/loadout-builder/LoadoutBuilder.m.scss
@@ -3,13 +3,14 @@
 .page {
   :global .perk-image {
     &.locked-perk {
-      border-color: $orange;
+      border-color: var(--theme-accent-primary);
     }
   }
 }
 
 .menuContent {
   box-sizing: border-box;
+
   @include phone-portrait {
     padding: 0 10px;
   }
@@ -24,6 +25,7 @@
   padding: 10px 10px;
   position: fixed;
   left: 50%;
+
   @include below-header;
 
   white-space: nowrap;
@@ -48,6 +50,7 @@
   flex-flow: row wrap;
   align-items: center;
   box-sizing: border-box;
+
   @include phone-portrait {
     padding: 0 10px;
   }
@@ -57,6 +60,7 @@
 
 .guide {
   box-sizing: border-box;
+
   @include phone-portrait {
     padding: 0 10px;
   }
