--- a/src/app/loadout-drawer/LoadoutDrawerHeader.m.scss
+++ b/src/app/loadout-drawer/LoadoutDrawerHeader.m.scss
@@ -34,7 +34,7 @@
   &:focus {
     background: black;
     outline: none;
-    border-bottom: 1px solid $orange;
+    border-bottom: 1px solid var(--theme-accent-primary);
   }
 
   > input {
