--- a/src/app/loadout/ingame/EditInGameLoadout.m.scss
+++ b/src/app/loadout/ingame/EditInGameLoadout.m.scss
@@ -33,7 +33,7 @@
   &:hover,
   &:active,
   &.checked {
-    background-color: $orange;
+    background-color: var(--theme-accent-primary);
     color: black;
     > img {
       filter: none !important;
