--- a/src/app/loadout/loadout-ui/Sockets.m.scss
+++ b/src/app/loadout/loadout-ui/Sockets.m.scss
@@ -15,6 +15,6 @@
 
 .automaticallyPicked {
   :global(.item-img) {
-    border: 1px solid $orange;
+    border: 1px solid var(--theme-accent-primary);
   }
 }
