--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -168,10 +168,10 @@ body {
   margin: 0 auto;
   background-color: #313233;
   color: white;
-  font-family: 'Open Sans', sans-serif, 'Destiny Symbols';
+  font-family: var(--theme-font-primary), sans-serif, 'Destiny Symbols';
   font-size: 12px;
   line-height: calc(16 / 12);
-  accent-color: $orange;
+  accent-color: var(--theme-accent-primary);
   // Disable drag and drop so we can use our polyfill
   -webkit-user-drag: none;
   // Don't let iOS Safari mess with font sizes
@@ -198,7 +198,7 @@ h4 {
 input,
 select,
 option {
-  font-family: 'Open Sans', sans-serif, 'Destiny Symbols';
+  font-family: var(--theme-font-primary), sans-serif, 'Destiny Symbols';
 }
 
 input[type='search'] {
@@ -246,13 +246,13 @@ select {
 
   &:hover,
   &:active {
-    background-color: $orange;
+    background-color: var(--theme-accent-primary);
     color: black;
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="black" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>');
   }
   // Set focus styles
   &:focus {
-    border-color: $orange;
+    border-color: var(--theme-accent-primary);
     outline: none;
   }
   // For browsers that support :focus-visible, remove focus styles when focus-visible would be unset
