--- a/src/app/notifications/NotificationButton.m.scss
+++ b/src/app/notifications/NotificationButton.m.scss
@@ -11,7 +11,7 @@
   width: 30%;
   cursor: pointer;
   &:hover {
-    background-color: $blue;
+    background-color: var(--theme-accent-secondary);
     color: #222;
   }
   & > svg {
