--- a/src/app/settings/SortOrderEditor.scss
+++ b/src/app/settings/SortOrderEditor.scss
@@ -40,9 +40,9 @@
   }
 
   .sort-forward {
-    color: $orange;
+    color: var(--theme-accent-primary);
   }
   .sort-reverse {
-    color: $blue;
+    color: var(--theme-accent-secondary);
   }
 }
