--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -11,8 +11,14 @@
 }
 
 .open {
+  box-shadow: var(--theme-drop-shadow-framed);
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
+
+  // Maintain dropshadow when hovering in and out of the open dropdown
+  &:hover {
+    box-shadow: var(--theme-drop-shadow-framed);
+  }
 }
 
 .menu {
@@ -21,6 +27,7 @@
   margin: 0;
   border-top: 0;
   background: var(--theme-fill-secondary);
+  box-shadow: var(--theme-drop-shadow-framed);
   position: absolute;
   z-index: 50;
   list-style: none;
@@ -175,6 +182,12 @@
   background: transparent;
   border: 0;
   cursor: pointer;
+  color: #999;
+
+  &:hover,
+  &:hover > span {
+    color: white;
+  }
 
   &:focus-visible {
     outline: 1px solid var(--theme-accent-primary);
@@ -187,7 +200,6 @@
   > :global(.app-icon),
   > button > :global(.app-icon) {
     font-size: 14px !important;
-    color: #999 !important;
     // Increase touch target size
     padding: 4px;
     margin: -4px;
