--- a/src/app/dim-ui/Dropdown.m.scss
+++ b/src/app/dim-ui/Dropdown.m.scss
@@ -8,6 +8,7 @@
 .menu {
   position: absolute;
   background: var(--theme-fill-primary);
+  box-shadow: var(--theme-drop-shadow-framed);
   color: white;
   font-size: 12px;
   z-index: 100;
@@ -51,7 +52,9 @@
 }
 
 .disabled {
-  color: #999 !important;
+  color: #666 !important;
+  cursor: not-allowed;
+
   :global(.app-icon) {
     color: #999 !important;
   }
@@ -63,7 +66,6 @@
 .kebabButton {
   composes: resetButton from './common.m.scss';
   padding: 4px 8px;
-  color: #999;
   transition: all 150ms ease-out;
   &:active,
   &:hover,
