--- a/src/app/search/search-filter.scss
+++ b/src/app/search/search-filter.scss
@@ -10,7 +10,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  background: #313233;
   padding-left: 5px;
   padding-right: 5px;
   height: 32px;
@@ -27,7 +26,11 @@
     height: 34px;
   }
 
-  &:hover,
+  &:hover {
+    outline: none;
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.2);
+  }
+
   &:focus {
     outline: none;
   }
