--- a/src/app/inventory-page/Stores.scss
+++ b/src/app/inventory-page/Stores.scss
@@ -165,7 +165,7 @@
   grid-template-columns:
     repeat(var(--num-characters), calc(6px + var(--character-column-width) + var(--column-padding)))
     calc(6px + var(--character-column-width) + var(--column-padding)) 1fr !important;
-  background: $gradient;
+  background: var(--theme-background-app-header-secondary);
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100% 100vh;
