--- a/src/app/item-popup/ItemPopupBody.scss
+++ b/src/app/item-popup/ItemPopupBody.scss
@@ -14,7 +14,7 @@
   background-color: black;
   &.selected {
     opacity: 1;
-    border-bottom: 2px solid $orange;
+    border-bottom: 2px solid var(--theme-accent-primary);
   }
   &:hover {
     color: white;
@@ -72,10 +72,10 @@
 .masterwork-progress {
   margin: 4px 0;
   padding: 4px 10px 4px;
-  background: #333;
+  background: var(--theme-fill-lighten);
 
   span {
-    color: $orange;
+    color: var(--theme-accent-primary);
     font-weight: bold;
   }
 
@@ -88,14 +88,14 @@
 
 .crafted-progress {
   padding: 4px 10px 4px;
-  background: #333;
+  background: var(--theme-fill-lighten);
   gap: 4px;
 
   display: flex;
   align-items: center;
 
   .objective-progress {
-    background: #222;
+    background: var(--theme-fill-darken);
   }
 
   .objective-progress-bar {
