--- a/src/app/loadout-builder/LoadoutBuilder.m.scss
+++ b/src/app/loadout-builder/LoadoutBuilder.m.scss
@@ -3,7 +3,7 @@
 .page {
   :global .perk-image {
     &.locked-perk {
-      border-color: $orange;
+      border-color: var(--theme-accent-primary);
     }
   }
 }
