--- a/src/app/dim-ui/StaticPage.m.scss
+++ b/src/app/dim-ui/StaticPage.m.scss
@@ -28,9 +28,12 @@
   }
   h2 {
     a {
-      color: $orange;
-      text-decoration: none;
-      border-bottom: 1px solid scale-color($orange, $alpha: -50%);
+      color: var(--theme-accent-primary);
+      text-decoration: underline;
+      text-underline-offset: 6px;
+      :global(.app-icon) {
+        margin-right: 6px;
+      }
     }
   }
   > p {
