--- a/src/app/dim-ui/WeaponCatalystInfo.m.scss
+++ b/src/app/dim-ui/WeaponCatalystInfo.m.scss
@@ -5,23 +5,22 @@
   padding-top: 2px;
   padding-bottom: 2px;
 
-  color: $orange;
+  color: var(--theme-accent-primary);
   font-weight: bold;
 }
 
 .catalystProgress {
   display: flex;
   flex-direction: column;
-  background: #222;
+  background: var(--theme-fill-lighten);
   gap: 4px;
 
   :global(.objective-progress) {
-    background: #222;
+    background: var(--theme-fill-darken);
   }
 }
 
 .catalystProgressSection {
   padding: 4px 10px 4px;
-  background: #333;
   flex-grow: 1;
 }
