--- a/src/app/item-popup/DesktopItemActions.m.scss
+++ b/src/app/item-popup/DesktopItemActions.m.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: black;
+  background-color: var(--theme-fill-secondary);
   user-select: none;
 }
 
@@ -22,7 +22,7 @@
   }
 
   &:hover :global(.app-icon) {
-    color: $orange;
+    color: var(--theme-accent-primary);
   }
 
   .collapsed & {
