--- a/src/app/organizer/DropDown.m.scss
+++ b/src/app/organizer/DropDown.m.scss
@@ -30,12 +30,12 @@ $dropdown-menu: 10;
     right: 0;
   }
 
-  background: black;
+  background: var(--theme-fill-primary);
+
   @include visible-scrollbars;
 }
 
 .checkButton {
-  background-color: black;
   border-radius: 0;
   border: none;
   box-sizing: border-box;
@@ -56,7 +56,7 @@ $dropdown-menu: 10;
 
   &:active {
     box-shadow: none;
-    background-color: $orange;
+    background-color: var(--theme-accent-primary);
   }
 
   :global(.app-icon) {
