--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -20,7 +20,7 @@
   overflow: hidden;
   margin: 0;
   border-top: 0;
-  background: #161616;
+  background: var(--theme-fill-secondary);
   position: absolute;
   z-index: 50;
   list-style: none;
@@ -28,8 +28,8 @@
   left: 0;
   right: 0;
   top: 32px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: var(--theme-corner-radius-search);
+  border-bottom-right-radius: var(--theme-corner-radius-search);
 
   @include phone-portrait {
     top: calc(100% + 1px);
@@ -113,7 +113,7 @@
 }
 
 .highlightedItem {
-  background-color: $orange;
+  background-color: var(--theme-accent-primary);
   color: black !important;
   .menuItemIcon {
     color: black;
@@ -159,7 +159,7 @@
 }
 
 .saveSearchButton > :global(.app-icon) {
-  color: $orange !important;
+  color: var(--theme-accent-primary) !important;
 }
 
 .filterHelp {
@@ -177,7 +177,7 @@
   cursor: pointer;
 
   &:focus-visible {
-    outline: 1px solid $orange;
+    outline: 1px solid var(--theme-accent-primary);
   }
 
   @include phone-portrait {
